--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Chosen Palette: Cool & Composed -->
     <!-- Application Structure Plan: A single-page, top-down narrative report designed for clarity and impact. It starts with a strong headline, followed by key performance indicators (KPIs) in prominent cards for an immediate overview. The core of the page is the equity curve chart, providing visual proof of performance. This is followed by detailed sections on the strategy's core advantages (the 'Trinity' filter system), its exceptional risk control, and its stable profitability. The page concludes with clear call-to-action buttons for downloading detailed reports. This structure guides the user from high-level results to deep-dive explanations, making complex information easily digestible. -->
-    <!-- Visualization & Content Choices: KPIs are presented as large numbers in styled HTML divs (Goal: Inform). The equity curve is an image placeholder, as raw data isn't available for a JS chart (Goal: Change). The filter system is explained using a three-column grid with icons (Unicode) and text (Goal: Organize). Download links are styled as buttons (Goal: Action). This approach avoids SVG/Mermaid and uses clean HTML/CSS for a professional look, focusing on readability and key takeaways. -->
+    <!-- Visualization & Content Choices: KPIs are presented as large numbers in styled HTML divs (Goal: Inform). The equity curve is an image placeholder, as raw data isn't available for a JS chart (Goal: Change). The filter system is explained using a three-column grid with icons (Unicode) and text (Goal: Organize). Download links are styled as buttons (Goal: Action). This avoids SVG/Mermaid and uses clean HTML/CSS for a professional look, focusing on readability and key takeaways. -->
     <!-- CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     <style>
         body {
@@ -103,8 +103,8 @@
             <h2 class="text-3xl font-bold mb-4">五年业绩表现</h2>
             <p class="text-lg text-slate-600 max-w-3xl mx-auto mb-8">策略净值曲线平滑向上，展示了强大的稳定性和穿越牛熊的抗风险能力。</p>
             <div class="bg-white p-4 rounded-xl shadow-lg">
-                <img src="https://i.imgur.com/your-equity-curve-image.png" alt="策略净值曲线图" class="w-full h-auto rounded-md">
-                <p class="text-sm text-slate-400 mt-2">注：请将此图片替换为您回测报告中的 `xu第三阶段5年测试优最终报告.gif` 文件。</p>
+                <!-- 重要提示: 请将下方 "src" 中的链接替换为您上传后的 GIF 文件路径 -->
+                <img src="./https://github.com/todaytech8888/5year-7777/blob/main/xu%E7%AC%AC%E4%B8%89%E9%98%B6%E6%AE%B55%E5%B9%B4%E6%B5%8B%E8%AF%95%E4%BC%98%E6%9C%80%E7%BB%88%E6%8A%A5%E5%91%8A.gif" alt="策略净值曲线图" class="w-full h-auto rounded-md">
             </div>
         </section>
 
