--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <p class="text-lg text-slate-600 max-w-3xl mx-auto mb-8">策略净值曲线平滑向上，展示了强大的稳定性和穿越牛熊的抗风险能力。</p>
             <div class="bg-white p-4 rounded-xl shadow-lg">
                 <!-- 重要提示: 请将下方 "src" 中的链接替换为您上传后的 GIF 文件路径 -->
-                <img src="./https://github.com/todaytech8888/5year-7777/blob/main/xu%E7%AC%AC%E4%B8%89%E9%98%B6%E6%AE%B55%E5%B9%B4%E6%B5%8B%E8%AF%95%E4%BC%98%E6%9C%80%E7%BB%88%E6%8A%A5%E5%91%8A.gif" alt="策略净值曲线图" class="w-full h-auto rounded-md">
+                <img src="./xu第三阶段5年测试优最终报告.gif" alt="策略净值曲线图" class="w-full h-auto rounded-md">
             </div>
         </section>
 
